threading now works
